--- a/Microwave.App/Microwave.App.csproj
+++ b/Microwave.App/Microwave.App.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Microwave.Classes\Microwave.Classes.csproj" />
   </ItemGroup>
 
