--- a/Microwave.Test.Integration/Microwave.Test.Integration.csproj
+++ b/Microwave.Test.Integration/Microwave.Test.Integration.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Microwave.Classes\Microwave.Classes.csproj" />
+  </ItemGroup>
+
 </Project>
